# notes-cli

./: .gitignore  pyproject.toml
notes/: __init__.py  config.py  crud.py
